Added local chart for vCluster
