# vcluster/tsp-output/@typespec/openapi3/openapi.v1.yaml
@@ -297,9 +297,9 @@ components:
       type: string
       enum:
         - Stable
-        - Local
+        - Beta
         - 0.19.6
-        - 0.20.0-beta.9
+        - 0.20.0-beta.10
     Versions:
       type: string
       enum:
